k8s/apps/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
  ports:
    - port: 8123
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
