k8s/apps/home-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/target: ddns.adtennant.dev
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: home-assistant.adtennant.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
  tls:
    - hosts:
        - home-assistant.adtennant.dev
      secretName: home-assistant-tls
